--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,7 @@ nav ul li a{
 	transition: 0.5s ease;
 }
 .homeimg{
-	background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(image/bloodcell.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(img/bloodcell.jpg);
 	width:100%;
 	height:100%;
 	background-repeat:no-repeat;
@@ -69,7 +69,7 @@ footer{
 }
  
 .contactimg{
-	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(image/22.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(img/22.jpg);
 	width:100%;
 	height:100%;
 	background-repeat:no-repeat;
@@ -78,7 +78,7 @@ footer{
 	padding:0;
 }
 .aboutimg{
-	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(image/22.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(img/22.jpg);
 	width:100%;
 	height:100%;
 	background-repeat:no-repeat;
@@ -285,7 +285,7 @@ marquee{
 	color:white;
 }
 .d1{
-	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(image/d1.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(img/d1.jpg);
 	width:100%;
 	height:100%;
 	background-repeat:no-repeat;
